--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -27,7 +27,9 @@
     justify-content: center;
     align-items: center;
     border: 1px solid #000;
+    border-radius: 8px;
     background: #f0f0f0;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
     transition: background 0.3s, box-shadow 0.3s;
     aspect-ratio: 3 / 4; /* obdélníkový poměr pro karty */
   }
